# marlin

./: .gitignore  .travis.yml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
marlin/: __init__.py  bookmark.py  bookmarks.json  cli.py  manage.py  marlin.py  marlin_batch_maker.py  marlin_help.py  rmark.py  styles.py
marlin/scripts/: marlin.bat  marlin.sh  marlin_help.py
tests/: test_marlin.py
