[tool.poetry]
name = "marlin"
version = "0.1.2"
description = "Swim between bookmarks in the termina"
authors = ["'Carlos <'carlos.w.montecinos@gmail.com'>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"
colorama = "^0.4.1"

[tool.poetry.dev-dependencies]
black = { version = "*", allows-prereleases = true }
pytest = "^4.3"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
